# Noder

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/Noder/: Analysis.hpp  Compiler.hpp  Interpreter.hpp  NodeCore.hpp  NodeUtils.hpp  Nodes.hpp
core/src/: Analysis.cpp  Compiler.cpp  Interpreter.cpp  NodeCore.cpp  Nodes.cpp
core/tests/: CMakeLists.txt  compiler-main.cpp  compiler-unit.cpp  core-unit.cpp  interpreter-unit.cpp  unit.cpp
tools/: CMakeLists.txt
tools/noder-cu/: CMakeLists.txt  LICENSE.md
tools/noder-cu/include/: creator.hpp
tools/noder-cu/interpreter/: CMakeLists.txt
tools/noder-cu/interpreter/include/: Interpreter.hpp  config.hpp.in
tools/noder-cu/interpreter/src/: BaseModule.cpp  Interpreter.cpp
tools/noder-cu/interpreter/tests/: CMakeLists.txt
tools/noder-cu/src/: creator.cpp  main.cpp
tools/noder-gui/: LICENSE.md  NOTICE.txt
